--- a/index.css
+++ b/index.css
@@ -4,3 +4,5 @@
 @import url('styles/hero.css');
 @import url('styles/clients.css');
 @import url('styles/service.css');
+@import url('styles/about.css');
+@import url('styles/about-card.css');
