--- a/styles/service.css
+++ b/styles/service.css
@@ -48,3 +48,11 @@
 	font-weight: 400;
 	line-height: 1.2;
 }
+
+
+@media (max-width: 768px) {
+	.service__wrapper {
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+}
