--- a/index.css
+++ b/index.css
@@ -6,3 +6,5 @@
 @import url('styles/service.css');
 @import url('styles/about.css');
 @import url('styles/about-card.css');
+@import url('styles/team.css');
+@import url('styles/reviews.css');
