--- a/styles/team.css
+++ b/styles/team.css
@@ -34,7 +34,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	align-items: start;
 	width: 25%;
 	padding: 0 15px;
 	margin-bottom: 30px;
@@ -65,8 +65,13 @@
 	line-height: 1.2;
 	font-weight: 440;
 	margin-bottom: 15px;
+	text-align: start;
 }
 
 .social__item {
 	margin: 0 8px;
+}
+
+.social {
+	width: 100%;
 }
