--- a/index.css
+++ b/index.css
@@ -8,3 +8,4 @@
 @import url('styles/about-card.css');
 @import url('styles/team.css');
 @import url('styles/reviews.css');
+@import url('styles/footer.css');
